[package]
name = "dragonfly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.0.32", features = ["derive", "env"], optional = true}
lazy_static = "1.4.0"
log = "0.4.17"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0.38"
